--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "5.21.1",
     "express": "4.21.1",
     "express-validator": "7.2.0",
+    "jsonwebtoken": "9.0.2",
     "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@types/express": "5.0.0",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.7.8",
     "@types/swagger-ui-express": "4.1.6",
     "prisma": "5.21.1",
