--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
+    "bcrypt": "5.1.1",
     "express": "4.21.1",
-    "express-validator": "7.2.0",
+    "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
     "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.7.8",
