--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@prisma/client": "5.21.1",
     "bcrypt": "5.1.1",
     "express": "4.21.1",
+    "express-async-handler": "1.2.0",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
-    "swagger-ui-express": "5.0.1"
+    "swagger-ui-express": "5.0.1",
+    "winston": "3.17.0"
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
