--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "2.8.5",
     "express": "4.21.1",
     "express-async-handler": "1.2.0",
+    "express-rate-limit": "7.5.0",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
     "swagger-ui-express": "5.0.1",
