--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "start:dev": "tsx watch src/server.ts",
     "test": "jest",
     "swagger": "tsx src/swagger/swagger.ts"
