feat: add internationalization support with i18next and update translations

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "4.21.1",
     "express-async-handler": "1.2.0",
     "express-rate-limit": "7.5.0",
+    "i18next": "25.1.2",
+    "i18next-fs-backend": "2.6.0",
+    "i18next-http-middleware": "3.7.4",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
     "swagger-ui-express": "5.0.1",
