--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/src/server.js",
     "start:dev": "tsx watch src/server.ts",
     "test": "jest",
-    "swagger": "tsx src/swagger/swagger.ts"
+    "swagger": "tsx src/swagger/swagger.ts",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
@@ -33,6 +34,7 @@
     "@types/node": "22.7.8",
     "@types/swagger-ui-express": "4.1.6",
     "jest": "29.7.0",
+    "prettier": "3.5.3",
     "prisma": "5.21.1",
     "swagger-autogen": "2.23.7",
     "ts-jest": "29.3.2",
