--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "swagger": "tsx src/swagger/swagger.ts",
     "format": "prettier --write .",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@prisma/client": "5.21.1",
@@ -36,7 +37,9 @@
     "@types/node": "22.7.8",
     "@types/swagger-ui-express": "4.1.6",
     "eslint": "9.26.0",
+    "husky": "9.1.7",
     "jest": "29.7.0",
+    "lint-staged": "16.0.0",
     "prettier": "3.5.3",
     "prisma": "5.21.1",
     "swagger-autogen": "2.23.7",
